assets/css/main.css
/*
Palete
#8661C1
#3A0842
#BE97C6
#0D2818
#21FA90

Mellow down the white color
#DCDCDD - Gainsbora white
#C5C3C6 - Silver white
*/

/*The "DINER" font from www.fontsquirrel.com*/
/*Location: "../fonts/diner-obese_regular_macroman/" */
@font-face {
    font-family: 'diner-obeseregular';
    src: url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.eot');
    src: url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.woff2') format('woff2'),
         url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.woff') format('woff'),
         url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.ttf') format('truetype'),
         url('../fonts/diner-obese_regular_macroman/Diner-Obese-webfont.svg#diner-obeseregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

* {
	box-sizing: border-box;
}

body{
	margin: 0px;
}

body, article, p, ul,footer {
	border: solid black 2px;
	font-family: sans-serif;
	font-size: 1em;
	/*background-color: #DCDCDD;*/
}



.nav-bar, .contact, .footer, .find-me{
	background-color: #590366;
	color: #C5C3C6;
}


body {
	display: flex;
	flex-direction: column;
	align-items: center;
}


/*Navigation Bar*/
.nav-bar{
	background-color: #3A0842;
	padding: 0.1em;
	padding-right: 2em;
	border: none;
	width: 100%;
	position: fixed;
	top: 0em;
	z-index: +1;

}

.nav-bar ul li{
	display: inline;
	border: none;

}

.nav-bar ul{
	border: none;
	background-color: #3A0842;
	display: flex;
	justify-content: flex-end;

}

a {

	text-decoration: none;
	padding: 0.6em;
	padding-left: 1em;
	padding-right: 1em;
	border-radius: 0.5em;

}

.nav-bar a:link {
	color: white;
	font-size: 1em;
	font-weight: 600;
}

.nav-bar a:visited {
	color: white;
}

.nav-bar a:focus {

}

.nav-bar a:hover {
	background-color: #8661C1;

}

.nav-bar a:active {

}


/*Add smooth scroll effect when a nav-bar button is pressed */
html{
  scroll-behavior: smooth;;
}

/*Home*/

/*Appling neon effect to text*/
.neonText {
  animation: flicker 1.5s infinite alternate;
  color: #FFFFFF;
}

h1 {
  font-size: 4.2rem;
}

/* Flickering animation */
@keyframes flicker {

  0%, 18%, 22%, 25%, 53%, 57%, 100% {

      text-shadow:
      0 0 4px #FFFFFF,
      0 0 11px #FFFFFF,
      0 0 19px #FFFFFF,
      0 0 40px #15FF00,
      0 0 80px #15FF00,
      0 0 90px #15FF00,
      0 0 100px #15FF00,
      0 0 150px #15FF00;

  }

  20%, 24%, 55% {
      text-shadow: none;
  }
}







.hero-2{
	background-image: url("/assets/img/atlas-shrugged-3.png");
	min-height: 60em;
	width: 100%;
	background-repeat: no-repeat;


}

/*Hero cocolor: #0082DD or #006AB6*/
.hero-1{
	background-color: #0082DD;
	min-height: 60em;
	width: 100%;
}



.hero-text{
	/*border: solid yellow 2px;*/
	display: flex;
	flex-direction: column;
	align-items: center;
	color: #DCDCDD;
	padding-top: 4em;



}


.hero-text h1 {
	font-family: "diner-obeseregular", sans-serif, monospace;
	font-size: 3em;
	/*letter-spacing: 0.6em;*/
	letter-spacing: 0.6em;
	font-size: 5em;
	padding-left: 0.6em;
	padding-right: 0em;
}

.hero-text p {
	border: none;
	font-size: 1.5em;
}

.hero-text h2{
	margin: 0;
	padding-left: 0em;
	padding-right: 0em;
}

/*The button styles*/
.button {

  text-decoration: none;
  outline: none;
  text-align: center;
  line-height: 3;
  color: white;
  font-weight: 600;
}

.button:link, .button:visited, .button:focus {
  background: #12804B;
}

.button:hover {
  background: #1BCD77;
}

.button:active {
  background: #8661C1;
  color: white;
}




/*About me section*/
.about {
	min-height: 70em;
	padding-top: 10em;
	width: 100%;
	background: black;
	color: white;
	text-indent: 1em;
	display: flex;
	flex-direction: column;
	align-items: center;

}



.container-par-img{
	width: 50%;
}

.about-par p:nth-child(1){
	padding-top: 0em;
	margin-top: 0em;
}


.about .button{
	margin-left: 1em;
}



.about .about-img {
float: right;
width: 15em;
margin: 1em;



}







/*Skills area*/

.skills {
	min-height: 50em;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	border: none;
}


.main-skills {
	display: flex;
}

.main-skills p {
	width: 10em;
	height: 20em;
	margin: 2em;
	border: none;
}

.skills p{
	border: none;
}

.skills .button {
	padding-top: 0em;
	padding-bottom: 0em;
}

.skills ul {
	list-style: none;
	border: none;
}

.skills img{
	max-width: 100%;
}




/*My Projects*/
.projects{
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
}

.container-of-projects {
	width: 80%;
	border: solid black 2px;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;

}





/*The styles for each project*/
.project-card img{
	width: 100%;
	height: 20em;
	object-fit: cover;
}

/*zoom effect*/
/* [1] The container */
.img-hover-zoom {
  height: 20em; /* [1.1] Set it as per your need */
  width: 100%;
  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
}

/* [2] Transition property for smooth transformation of images */
.img-hover-zoom img {
  transition: transform .5s ease;
}

/* [3] Finally, transforming the image when container gets hovered */
.img-hover-zoom:hover img {
  transform: scale(1.5);
}

/*end of zoom effect*/


.project-card {
	border: solid black 2px;
	margin: 1em;
	width: 25em;
	height: 40em;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	background: #AFAFAF;
}

.project-card p {
	align-self: flex-start;
}

.project-card .button {
	align-self: flex-end;
	width: 90%;
	margin: 0.2em;
}




/*Contact me area*/
h2{
	text-align: center;
	padding: 1em;
	padding-top: 3em;
}

.contact {
	width: 100%;

}

.form-container {
	padding-bottom: 17em;
}

form {
	border: solid black 2px;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

form{
	border: solid black 2px;

}

form input, form textarea, form select, form button {
	font-family: inherit;
	font-size: 1em;
	background-color: #830A95;
	color: white;
	border: none;
	box-sizing: border-box;
	padding: 0px;
	padding: 1em;
	margin: 0px;
	margin-bottom: 2em;
	display: block;
	line-height: 2em;

}



form .name-email {
	/*border: solid black 2px;*/
	width: 91.5%;
	display: flex;
	justify-content: space-between;
}

form #name, form #email {
	display: inline;
	width: 49%;
}

form #name {
	margin-right: 1%;

}

form #email {

}

form #subject {
	width: 91.5%;

}

form #message {
	width: 91.5%;
}

form textarea {
	height: 15em;
}


form .submit-reset input[type="submit"],
form .submit-reset input[type="reset"]
 {
	display: inline;
	width: 16em;


}

form input[type="submit"] {
	margin-right: 1em;
}


form .submit-reset input[type="submit"]:hover,
form .submit-reset input[type="reset"]:hover {
	 /*background: #1BCD77;*/
	 background-color: #8661C1;

}

form .submit-reset input[type="submit"]:active,
form .submit-reset input[type="reset"]:active {
	 background: #1BCD77;
	 /*background: #8661C1;*/

}




/*Find me*/
.find-me{
	width: 100%;
	height: 20em;
	display: flex;
	flex-direction: column;
	align-items: center;

}

.find-me .icons {
	display: flex;

}

.find-me .linkedin-icon,
.find-me .github-icon,
.find-me .google-icon {
	border: solid black 2px;
	width: 2em;
	height: 2em;
	display: block;
	margin: 1em;
	padding: 1em;


}

.find-me .linkedin-icon {
	background-image: url("../icons/linkedin-icon.png");
	background-size: contain;
	background-repeat: no-repeat;

}

.find-me .github-icon {
	background-image: url("../icons/github-icon.png");
	background-size: contain;
	background-repeat: no-repeat;

}

.find-me .google-icon {
	background-image: url("../icons/google-icon.png");
	background-size: contain;
	background-repeat: no-repeat;


}


.find-me .linkedin-icon:hover,
.find-me .github-icon:hover,
.find-me .google-icon:hover {
	position: relative;
	top: 0.5em;

}



/*Style the footer*/

footer{
	width: 100%;
	text-align: center;

}






/*
body{
	height: 1000em;
}
*/

